// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appends "_focused" to className if hasFocus is true 1`] = `
<button
  aria-label="Fashion size red"
  className="root_focused"
  onClick={[Function]}
  title="red"
  type="button"
>
  <span>
    red
  </span>
</button>
`;

exports[`appends "_outOfStock" to className if isEverythingOutOfStock is true 1`] = `
<button
  aria-label="Fashion size red"
  className="root_outOfStock"
  disabled={true}
  onClick={[Function]}
  title="red"
  type="button"
>
  <span>
    red
  </span>
</button>
`;

exports[`appends "_outOfStock" to className if isOptionOutOfStock is true 1`] = `
<button
  aria-label="Fashion size red"
  className="root_outOfStock"
  disabled={true}
  onClick={[Function]}
  title="red"
  type="button"
>
  <span>
    red
  </span>
</button>
`;

exports[`appends "_selected" to className if isSelected is true 1`] = `
<button
  aria-label="Fashion size red button selected"
  className="root_selected"
  onClick={[Function]}
  title="red"
  type="button"
>
  <span>
    red
  </span>
</button>
`;

exports[`renders a Tile correctly 1`] = `
<button
  aria-label="Fashion size red"
  className="root"
  onClick={[Function]}
  title="red"
  type="button"
>
  <span>
    red
  </span>
</button>
`;
